tampereen tuomiokirkon kuva lisätty

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </span>
         <dl class="clearfix">
             <dt class="heading"><h1>Tampere</h1></dt>
-            <dd class="image"><img src="images/Tampere.jpg" alt="birch leaves in spring"></dd>
+            <dd class="image"><img src="images/Tampere.jpg" alt="Tampereen tuomiokirkko"></dd>
             <dd class="text">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit id molestiae cumque exercitationem veritatis saepe.</p>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis perferendis reiciendis blanditiis odit, dolore fugit tempore cupiditate nisi maiores error repellendus deleniti ipsa vitae animi beatae ab quidem esse ipsam doloremque nemo consequatur? In praesentium eos impedit aspernatur laborum natus.</p>
@@ -58,7 +58,7 @@
         </span>
         <dl class="clearfix">
             <dt class="heading"><h1>Tampere</h1></dt>
-            <dd class="image"><img src="images/Tampere.jpg" alt="birch leaves in spring"></dd>
+            <dd class="image"><img src="images/Tampere.jpg" alt="Tampereen tuomiokirkko"></dd>
             <dd class="text">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit id molestiae cumque exercitationem veritatis saepe.</p>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis perferendis reiciendis blanditiis odit, dolore fugit tempore cupiditate nisi maiores error repellendus deleniti ipsa vitae animi beatae ab quidem esse ipsam doloremque nemo consequatur? In praesentium eos impedit aspernatur laborum natus.</p>
@@ -86,7 +86,7 @@
         </span>
         <dl class="clearfix">
             <dt class="heading"><h1>Tampere</h1></dt>
-            <dd class="image"><img src="images/Tampere.jpg" alt="birch leaves in spring"></dd>
+            <dd class="image"><img src="images/Tampere.jpg" alt="Tampereen tuomiokirkko"></dd>
             <dd class="text">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit id molestiae cumque exercitationem veritatis saepe.</p>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis perferendis reiciendis blanditiis odit, dolore fugit tempore cupiditate nisi maiores error repellendus deleniti ipsa vitae animi beatae ab quidem esse ipsam doloremque nemo consequatur? In praesentium eos impedit aspernatur laborum natus.</p>
